"Bazel dependencies"

bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_java", version = "9.5.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_pkg", version = "1.2.0")

include("//infra/containers:containers.MODULE.bazel")
include("//:go.MODULE.bazel")
include("//:java.MODULE.bazel")

