go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")


go_sdk.download(version = "1.23.1")
go_sdk.download(
    version = "1.23.1",
    goarch = "amd64",
    goos = "linux",
)
go_sdk.host()


go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_labstack_echo_v4",
)
