maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Version variables
# renovate: datasource=maven depName=com.google.inject:guice-bom
GUICE_VERSION = "7.0.0"

# renovate: datasource=maven depName=org.jboss.resteasy:resteasy-bom
RESTEASY_VERSION = "7.0.0.Beta1"

# renovate: datasource=maven depName=org.eclipse.jetty:jetty-bom
JETTY_VERSION = "12.1.1"

# renovate: datasource=maven depName=org.glassfish.jersey:jersey-bom
JERSEY_VERSION = "4.0.0-M2"

# renovate: datasource=maven depName=org.flywaydb:flyway-core
FLYWAY_VERSION = "11.12.0"

# renovate: datasource=maven depName=com.fasterxml.jackson:jackson-bom
JACKSON_VERSION = "2.20.0"

# renovate: datasource=maven depName=org.jooq:jooq
JOOQ_VERSION = "3.20.6"

# renovate: datasource=maven depName=org.postgresql:postgresql
POSTGRES_VERSION = "42.7.7"

# renovate: datasource=maven depName=org.assertj:assertj-core
ASSERTJ_VERSION = "3.27.4"

JUNIT_VERSION = "5.10.3"

JUNIT_PLATFORM_VERSION = "1.10.3"

MOCKITO_VERSION = "5.12.0"

TESTCONTAINERS_VERSION = "1.19.8"

maven.install(
    artifacts = [
        # Testing
        "org.assertj:assertj-core:" + ASSERTJ_VERSION,

        # Dependency Injection
        "com.google.inject.extensions:guice-servlet:" + GUICE_VERSION,
        "com.google.inject:guice:" + GUICE_VERSION,

        # Jetty
        "org.eclipse.jetty.ee10:jetty-ee10-servlet:" + JETTY_VERSION,
        "org.eclipse.jetty:jetty-server:" + JETTY_VERSION,
        "org.eclipse.jetty:jetty-slf4j-impl:" + JETTY_VERSION,

        # Jakarta Servlet API (for EE10)
        "jakarta.servlet:jakarta.servlet-api:6.1.0",

        "org.slf4j:slf4j-api:2.0.17",

        "com.typesafe:config:1.4.5",

        "org.flywaydb:flyway-core:11.12.0",
        "org.flywaydb:flyway-database-postgresql:11.12.0",

        "org.postgresql:postgresql:42.7.7",
        "com.zaxxer:HikariCP:7.0.2",
    ],
    fetch_sources = True,
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
