bazel_dep(name = "rules_oci", version = "2.2.2")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

include("//infra/containers/distroless:distroless.MODULE.bazel")

include("//infra/containers/nginx:nginx.MODULE.bazel")

include("//infra/containers/registry:registry.MODULE.bazel")

include("//infra/containers/grafana:grafana.MODULE.bazel")

include("//infra/containers/home-assistant:home-assistant.MODULE.bazel")
