bazel_dep(name = "rules_oci", version = "2.2.6")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

include("//infra/containers/distroless:distroless.MODULE.bazel")

include("//infra/containers/nginx:nginx.MODULE.bazel")

include("//infra/containers/registry:registry.MODULE.bazel")

include("//infra/containers/grafana:grafana.MODULE.bazel")

include("//infra/containers/home-assistant:home-assistant.MODULE.bazel")

include("//infra/containers/wireguard:wireguard.MODULE.bazel")

### arrs  ###
include("//infra/containers/radarr:radarr.MODULE.bazel")
include("//infra/containers/prowlarr:prowlarr.MODULE.bazel")
include("//infra/containers/sonarr:sonarr.MODULE.bazel")
include("//infra/containers/qbittorrent:qbittorrent.MODULE.bazel")
