oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=gcr.io/distroless/static
oci.pull(
    name = "distroless",
    digest = "sha256:cd64bec9cec257044ce3a8dd3620cf83b387920100332f2b041f19c4d2febf93",
    image = "gcr.io/distroless/static",
    platforms = [
        "linux/amd64",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/s390x",
        "linux/ppc64le",
    ],
)
use_repo(
    oci,
    "distroless",
    "distroless_linux_amd64",
    "distroless_linux_arm64_v8",
    "distroless_linux_arm_v7",
    "distroless_linux_ppc64le",
    "distroless_linux_s390x",
)
