oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=gcr.io/distroless/static
oci.pull(
    name = "distroless",
    digest = "sha256:972618ca78034aaddc55864342014a96b85108c607372f7cbd0dbd1361f1d841",
    image = "gcr.io/distroless/static",
    platforms = [
        "linux/amd64",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/s390x",
        "linux/ppc64le",
    ],
)
use_repo(
    oci,
    "distroless",
    "distroless_linux_amd64",
    "distroless_linux_arm64_v8",
    "distroless_linux_arm_v7",
    "distroless_linux_ppc64le",
    "distroless_linux_s390x",
)
