oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=gcr.io/distroless/static
oci.pull(
    name = "distroless",
    digest = "sha256:d90359c7a3ad67b3c11ca44fd5f3f5208cbef546f2e692b0dc3410a869de46bf",
    image = "gcr.io/distroless/static",
    platforms = [
        "linux/amd64",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/s390x",
        "linux/ppc64le",
    ],
)
use_repo(
    oci,
    "distroless",
    "distroless_linux_amd64",
    "distroless_linux_arm64_v8",
    "distroless_linux_arm_v7",
    "distroless_linux_ppc64le",
    "distroless_linux_s390x",
)
