oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/grafana/grafana-oss
oci.pull(
    name = "grafana",
    digest = "sha256:0f86bada30d65ef9d0183b90c1e2682ac92d53d95da8bed322b984ea78a4a73a",
    image = "docker.io/grafana/grafana-oss",
    platforms = [
        "linux/amd64",
        "linux/arm64",
        "linux/arm/v7",
    ],
)
use_repo(
    oci,
    "grafana",
    "grafana_linux_amd64",
    "grafana_linux_arm64",
    "grafana_linux_arm_v7",
)
