oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/grafana/grafana-oss
oci.pull(
    name = "grafana",
    digest = "sha256:2d1f9ae67c1778d33e291d4c3c759cd8b650e67491f02533499eb950e075eeb5",
    image = "docker.io/grafana/grafana-oss",
    platforms = [
        "linux/amd64",
        "linux/arm64",
        "linux/arm/v7",
    ],
)
use_repo(
    oci,
    "grafana",
    "grafana_linux_amd64",
    "grafana_linux_arm64",
    "grafana_linux_arm_v7",
)
