oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/grafana/grafana-oss
oci.pull(
    name = "grafana",
    digest = "sha256:5dad0df181cb644a14e13617b913b261a54f7d4fd4510721dba420929f35bea2",
    image = "docker.io/grafana/grafana-oss",
    platforms = [
        "linux/amd64",
        "linux/arm64",
        "linux/arm/v7",
    ],
)
use_repo(
    oci,
    "grafana",
    "grafana_linux_amd64",
    "grafana_linux_arm64",
    "grafana_linux_arm_v7",
)
