oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/homeassistant/home-assistant
oci.pull(
    name = "home-assistant",
    digest = "sha256:ff875078181a0383bf3fca9f061be12d6180896dbd531de04e094e25505b0bb9",
    image = "docker.io/homeassistant/home-assistant",
    platforms = [
        "linux/arm64",
        "linux/amd64",
    ],
)
use_repo(
    oci,
    "home-assistant",
    "home-assistant_linux_amd64",
    "home-assistant_linux_arm64",
)
