oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/homeassistant/home-assistant
oci.pull(
    name = "home-assistant",
    digest = "sha256:aed891b8f801072302815b4b0fab5adb714182967e9d2e2d4a2be558241c73ad",
    image = "docker.io/homeassistant/home-assistant",
    platforms = [
        "linux/arm64",
        "linux/amd64",
    ],
)
use_repo(
    oci,
    "home-assistant",
    "home-assistant_linux_amd64",
    "home-assistant_linux_arm64",
)
