oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/homeassistant/home-assistant
oci.pull(
    name = "home-assistant",
    digest = "sha256:adb3341e31e03e0048e60d8c1cf952e118a381ae258bb921d3da12a3b27bf0c2",
    image = "docker.io/homeassistant/home-assistant",
    platforms = [
        "linux/arm64",
        "linux/amd64",
    ],
)
use_repo(
    oci,
    "home-assistant",
    "home-assistant_linux_amd64",
    "home-assistant_linux_arm64",
)
