oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/library/nginx
oci.pull(
    name = "nginx",
    digest = "sha256:c881927c4077710ac4b1da63b83aa163937fb47457950c267d92f7e4dedf4aec",
    image = "docker.io/library/nginx",
    platforms = [
        "linux/386",
        "linux/amd64",
        "linux/arm/v5",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/mips64le",
        "linux/ppc64le",
        "linux/s390x",
    ],
)
use_repo(
    oci,
    "nginx",
    "nginx_linux_386",
    "nginx_linux_amd64",
    "nginx_linux_arm64_v8",
    "nginx_linux_arm_v5",
    "nginx_linux_arm_v7",
    "nginx_linux_mips64le",
    "nginx_linux_ppc64le",
    "nginx_linux_s390x",
)
