oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/prowlarr
oci.pull(
    name = "prowlarr",
    digest = "sha256:7ab5769616c1929247c8e7944453253f0b777fac2724c3bc9976ae2ff4023257",
    image = "docker.io/linuxserver/prowlarr",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "prowlarr",
    "prowlarr_linux_amd64",
    "prowlarr_linux_arm64",
)
