oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/prowlarr
oci.pull(
    name = "prowlarr",
    digest = "sha256:3950b5e48cf4ba9dab78fe14038dd7f062e66b7b4ab368b02c94a13f6a3dae9f",
    image = "docker.io/linuxserver/prowlarr",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "prowlarr",
    "prowlarr_linux_amd64",
    "prowlarr_linux_arm64",
)
