oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/prowlarr
oci.pull(
    name = "prowlarr",
    digest = "sha256:3e9bd62ca90c97c5df75b7012e10a29f6926e62807deeddc1dc89e6e2fd141e1",
    image = "docker.io/linuxserver/prowlarr",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "prowlarr",
    "prowlarr_linux_amd64",
    "prowlarr_linux_arm64",
)
