oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/qbittorrent
oci.pull(
    name = "qbittorrent",
    digest = "sha256:eeea9f8a8cdde23555186843d26e8ded1222421f31f98a5cc1b50c2882ebcf4e",
    image = "docker.io/linuxserver/qbittorrent",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "qbittorrent",
    "qbittorrent_linux_amd64",
    "qbittorrent_linux_arm64",
)
