oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/qbittorrent
oci.pull(
    name = "qbittorrent",
    digest = "sha256:bca2cf536c00900f0b8fb62ca3dcbed8ee64293165d41c8240d2cc952d4ef048",
    image = "docker.io/linuxserver/qbittorrent",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "qbittorrent",
    "qbittorrent_linux_amd64",
    "qbittorrent_linux_arm64",
)
