oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/qbittorrent
oci.pull(
    name = "qbittorrent",
    digest = "sha256:163f3384db6cba9f68eaa83ca5f4209298b6029ba2d07b5e67562d0715baf5b9",
    image = "docker.io/linuxserver/qbittorrent",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "qbittorrent",
    "qbittorrent_linux_amd64",
    "qbittorrent_linux_arm64",
)
