oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/radarr
oci.pull(
    name = "radarr",
    digest = "sha256:1e95b5c13fe015361a9ae1c4d99fc2336816790aaea60fa74b2ffebe076a69e0",
    image = "docker.io/linuxserver/radarr",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "radarr",
    "radarr_linux_amd64",
    "radarr_linux_arm64",
)
