oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/radarr
oci.pull(
    name = "radarr",
    digest = "sha256:39da107b5a9371fdaa651bd188049b863716a815385eb3a30d41071b7e1aeb33",
    image = "docker.io/linuxserver/radarr",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "radarr",
    "radarr_linux_amd64",
    "radarr_linux_arm64",
)
