oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "registry",
    digest = "sha256:8a7c1aae9db5028cbc1cfe83e5969d270a50e8bc0b72eef3cc5657542ec383c9",
    image = "docker.io/library/registry",
    platforms = [
        "linux/amd64",
        "linux/arm/v6",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/ppc64le",
        "linux/s390x",
    ],
)
use_repo(
    oci,
    "registry",
    "registry_linux_amd64",
    "registry_linux_arm64_v8",
    "registry_linux_arm_v6",
    "registry_linux_arm_v7",
    "registry_linux_ppc64le",
    "registry_linux_s390x",
)
