oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "registry",
    digest = "sha256:85347ed2ecde64161c7a4788a4d7d3dcc9d6f86f7be95834022e3c6a423a945a",
    image = "docker.io/library/registry",
    platforms = [
        "linux/amd64",
        "linux/arm/v6",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/ppc64le",
        "linux/s390x",
    ],
)
use_repo(
    oci,
    "registry",
    "registry_linux_amd64",
    "registry_linux_arm64_v8",
    "registry_linux_arm_v6",
    "registry_linux_arm_v7",
    "registry_linux_ppc64le",
    "registry_linux_s390x",
)
