oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/sonarr
oci.pull(
    name = "sonarr",
    digest = "sha256:60f3b6b5c7647ba2bafd81163acfe34b11117b9b834ebd7fbcc3e5f1b309c7ef",
    image = "docker.io/linuxserver/sonarr",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "sonarr",
    "sonarr_linux_amd64",
    "sonarr_linux_arm64",
)
