oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/sonarr
oci.pull(
    name = "sonarr",
    digest = "sha256:02bc962946fef994e67a38152446df25c10a52f8583aefeeb6467f9dd44cab99",
    image = "docker.io/linuxserver/sonarr",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "sonarr",
    "sonarr_linux_amd64",
    "sonarr_linux_arm64",
)
