oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/sonarr
oci.pull(
    name = "sonarr",
    digest = "sha256:fbb15bb4fb14d1ffe017f6be0e3fed8f1b300e4687e329767da0b61f36ba1eed",
    image = "docker.io/linuxserver/sonarr",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "sonarr",
    "sonarr_linux_amd64",
    "sonarr_linux_arm64",
)
