oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/wireguard
oci.pull(
    name = "wireguard",
    digest = "sha256:1bf21d1c8933f7376da97bb14a459ae18e716e49d2e3456dbfd71414f60a319a",
    image = "docker.io/linuxserver/wireguard",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "wireguard",
    "wireguard_linux_amd64",
    "wireguard_linux_arm64",
)
