oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# renovate: datasource=docker depName=docker.io/linuxserver/wireguard
oci.pull(
    name = "wireguard",
    digest = "sha256:ad0501c857edad4059f90c9b536338cb105bbb5f3fc82070986d36b937c897ca",
    image = "docker.io/linuxserver/wireguard",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "wireguard",
    "wireguard_linux_amd64",
    "wireguard_linux_arm64",
)
