load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/amriksd/code/projects/go-docs/cmd",
    visibility = ["//visibility:private"],
    deps = ["@com_github_labstack_echo_v4//:go_default_library"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
