load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/amriksd/code/projects/go-docs/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_otiai10_gosseract_v2//:gosseract",
    ],
    tags = ["skip"] # Broken due to tesseract-ocr dependency, too dumb/lazy to fix it.
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
    tags = ["skip"] # Broken due to tesseract-ocr dependency, too dumb/lazy to fix it.
)
