load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = ["136-single-number.go"],
    importpath = "",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = ["136-single-number_test.go"],
    embed = [":lib"],
)

go_library(
    name = "go_lib",
    srcs = ["136-single-number.go"],
    importpath = "github.com/amriksd/code/projects/Leetcode/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_test",
    srcs = ["136-single-number_test.go"],
    embed = [":go_lib"],
)
