load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "do_lib",
    srcs = ["main.go"],
    importpath = "github.com/amriksd/code/projects/do/cmd/do",
    visibility = ["//visibility:private"],
    deps = ["//projects/do/internal/cli"],
)

go_binary(
    name = "do",
    embed = [":do_lib"],
    visibility = ["//visibility:public"],
)
