load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = ["app.go"],
    importpath = "github.com/amriksd/code/projects/do/internal/cli",
    visibility = ["//projects/do:__subpackages__"],
    deps = [
        "//projects/do/internal/prompt",
        "//projects/do/internal/tmux",
        "//projects/do/internal/version",
    ],
)
