load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "vibe_lib",
    srcs = ["main.go"],
    importpath = "github.com/amriksd/code/projects/vibe/cmd/vibe",
    visibility = ["//visibility:private"],
    deps = ["//projects/vibe/internal/cli"],
)

go_binary(
    name = "vibe",
    embed = [":vibe_lib"],
    visibility = ["//visibility:public"],
)
